Closed Bug 1147707 Opened 8 years ago Closed 8 years ago

DisplayItemClip::ApplyNonRoundedIntersection doesn't intersect correctly

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox39 --- fixed

People

(Reporter: seth, Assigned: seth)

References

Details

Attachments

(1 file)

The patch in bug 1147706 made it apparent that we have a bug in DisplayItemClip::ApplyNonRoundedIntersection. See here:

https://dxr.mozilla.org/mozilla-central/source/layout/base/DisplayItemClip.cpp?from=ApplyNonRoundedIntersection&case=true#330

That line of code doesn't do anything, because Intersect() returns a new rect which we immediately destroy.
Comment on attachment 8583526 [details] [diff] [review]
Intersect correctly in DisplayItemClip::ApplyNonRoundedIntersection

Review of attachment 8583526 [details] [diff] [review]:
-----------------------------------------------------------------

OW!
Attachment #8583526 - Flags: review?(roc) → review+
https://hg.mozilla.org/mozilla-central/rev/950e7c72280a
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
You need to log in before you can comment on or make changes to this bug.